integration/control-plane/envoy.yaml
node:
  id: async-service-supervisor-envoy-control-plane
  cluster: async-service-supervisor-envoy-control-plane

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19000

dynamic_resources:
  # Clusters come from the supervisor's dedicated CDS stream. ADS remains
  # unconfigured and is available to another control plane.
  cds_config:
    resource_api_version: V3
    api_config_source:
      api_type: GRPC
      transport_api_version: V3
      grpc_services:
        - envoy_grpc:
            cluster_name: xds_cluster

static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  # The application cluster arrives over CDS after this static
                  # route is loaded.
                  validate_clusters: false
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: app-http1
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    # This bootstrap cluster lets Envoy reach the supervisor. Application
    # clusters arrive over CDS and point their EDS subscriptions back here.
    - name: xds_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: supervisor
                      port_value: 18000
      http2_protocol_options: {}
